--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
 	    <script type="text/javascript" src="phaser.min.js"></script>
-	    <script type="text/javascript" src="Title.js"></script>
-	    <script type="text/javascript" src="Field.js"></script>
-	    <script type="text/javascript" src="happybird.js"></script>
+	    <script type="text/javascript" src="src/Title.js"></script>
+	    <script type="text/javascript" src="src/Field.js"></script>
+	    <script type="text/javascript" src="src/happybird.js"></script>
     </head>
     <body>
     </body>
