--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
 <html>
-    <head>
-	    <script type="text/javascript" src="phaser.min.js"></script>
-	    <script type="text/javascript" src="src/Title.js"></script>
-	    <script type="text/javascript" src="src/Field.js"></script>
-	    <script type="text/javascript" src="src/happybird.js"></script>
-    </head>
-    <body>
-    </body>
+<!-- Feel free to clean this page up! -->
+
+<head>
+</head>
+
+<body>
+    <ol>
+        <li><a href="dev">dev</a></li>
+        <li><a href="alpha">alpha</a></li>
+        <li><a href="beta">beta</a></li>
+        <li><a href="final">final</a></li>
+    </ol>
+</body>
+
 </html>
