Made the day cycle but health does not carry over.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	    <script type="text/javascript" src="phaser.min.js"></script>
 	    <script type="text/javascript" src="src/Title.js"></script>
 	    <script type="text/javascript" src="src/Field.js"></script>
+        <script type="text/javascript" src="src/Sleep.js"></script>
 	    <script type="text/javascript" src="src/happybird.js"></script>
     </head>
     <body>
