cleaned up alpha, updating beta but need assets

--- a/alpha/index.html
+++ b/alpha/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
 	    <script type="text/javascript" src="src/phaser.min.js"></script>
-	    <script type="text/javascript" src="src/Title.js"></script>
-	    <script type="text/javascript" src="src/Field.js"></script>
-	    <script type="text/javascript" src="src/happybird.js"></script>
+	    <script type="text/javascript" src="src/AlphaTitle.js"></script>
+	    <script type="text/javascript" src="src/AlphaField.js"></script>
+	    <script type="text/javascript" src="src/Alphahappybird.js"></script>
     </head>
     <body>
     </body>
