--- a/beta/index.html
+++ b/beta/index.html
@@ -4,7 +4,9 @@
 	    <script type="text/javascript" src="src/phaser.min.js"></script>
 	    <script type="text/javascript" src="src/Title.js"></script>
 	    <script type="text/javascript" src="src/Field.js"></script>
+        <script type="text/javascript" src="src/Sleep.js"></script>
 	    <script type="text/javascript" src="src/happybird.js"></script>
+        
     </head>
     <body>
     </body>
